# erv

./: Dockerfile  README.md  docker-compose.prd.yml  docker-compose.yml  erv.py  main.py  requirements.txt  wsgi.ini
.github/workflows/: docker-image.yml
app/: .dockerignore  Dockerfile  build_and_push.sh  erv.py  log.py  main.py  pyproject.toml  requirements.txt
climate/: Dockerfile  climate.yml  main.py  pyproject.toml  requirements.txt
nginx/: site-nginx.conf
server/: Dockerfile  site-nginx.conf  supervisord.conf  test-nginx.conf  wsgi.ini  wsgi.ini.bak
wsgi/: wsgi.ini
